Major refactor of powers and context-aware error reporter * Powers now have an `Impl` class, used for when granting powers to an entity. Each granted power will have a unique `Impl` instance to an entity * Improved error building in context-aware error reporter * Added method for building a display string for context-aware objects